<resources>
    <string name="app_name">Timelock.zone</string>
    <string name="Encrypt">Encrypt</string>
    <string name="Typehere">Type here the message to encrypt…\nOr paste here the ciphertext to decrypt…</string>
    <string name="Decrypt">Decrypt</string>
    <string name="Choose">Choose a date</string>
    <string name="Hour">Choose an hour</string>
    <string name="Exit">Exit</string>
    <string name="pick_date">Choose  a date</string>
    <string name="AppLink">https://www.timelock.zone/ct/</string>
    <string name="b1">You received a message encrypted to the future. You can decrypt it from the day" "</string>
    <string name="b2">To decrypt download the timelock.zone App from https://www.timelock.zone and open the following link:" "</string>
    <string name="b3">Download the timelock.zone app from https://www.timelock.zone</string>
    <string name="b4">Timelock.zone message encrypted to the future</string>
    <string name="ctc">Ciphertext copied to clipboard</string>
    <string name="e1">No valid ciphertext to share. Before sharing, follow the instructions to encrypt a message to the future.</string>
    <string name="e2">Error</string>
    <string name="e3">An error occurred. Unable to encrypt/decrypt.</string>
    <string name="e4">Invalid Date</string>
    <string name="e5">The encrypted message is not associated to a valid date.</string>
    <string name="e6">It is not time yet</string>
    <string name="e7">You must wait until" "</string>
    <string name="e8">to decrypt.</string>
    <string name="e9">Invalid ciphertext format</string>
    <string name="e10">An error occurred. Unable to encrypt/decrypt.</string>
    <string name="e11">Share using</string>
    <string name="e12">Timelock.zone service not working now. Try later.</string>
    <string name="e13">Minutes are ignored</string>
    <string name="e14">Minutes will be ignored. The selected hour is set to:</string>
    <string name="instructions_tile">Instructions</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="instructions">How to encrypt.\n1. Choose a date and hour in the future (minutes are ignored).\n2. Click on Encrypt.\nThe ciphertext will be displayed. Click on it to copy it to your clipboard.\n\n
    How to decrypt.\n
    1. Paste the ciphertext in the textbox.\n
    2. Click on Decrypt.\n
    The plaintext will be displayed or you will get an error if the time of decryption is not reached yet.\n\n

    Sharing.\n
    Click on the sharing icon to share the ciphertext along with instructions to social media.\n\n

    ©Timelock.zone, 2023.\nPowered by drand.love.</string>
</resources>